deployment/gateway/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
      - name: gateway
        image: 929140636859.dkr.ecr.ap-south-1.amazonaws.com/scrapbook-gateway:latest
        ports:
        - containerPort: 3090
        volumeMounts:
        - name: storage
          mountPath: /data/storage
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: storage-pvc
