deployment/gateway/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 3090
      targetPort: 3090
      nodePort: 30090
